force-app/main/default/objects/LOAN_EMI__c/LOAN_EMI__c.object-meta.xml
<CustomObject>
    <label>LOAN</label>
    <nameField>
        <label>LOAN  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LOANs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>