force-app/main/default/objects/LOAN_EMI__c/fields/Payment_frequency_Fees__c.field-meta.xml
<CustomField>
    <fullName>Payment_frequency_Fees__c</fullName>
    <formula>IF(TEXT(Payment_Frequency__c) = &quot;Weekly&quot;, 300,  
   IF(TEXT(Payment_Frequency__c) = &quot;Monthly&quot;, 500, 600))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment frequency Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>