force-app/main/default/objects/LOAN_EMI__c/fields/Repayment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Amount__c</fullName>
    <formula>Total_Repayment_Amount__c    /   VALUE(TEXT(Repayment_Term__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repayment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>