force-app/main/default/objects/LOAN_EMI__c/fields/Total_Repayment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Repayment_Amount__c</fullName>
    <formula>(Loan_Amount__c + Payment_frequency_Fees__c)  + (

  IF( AND(Loan_Amount__c &gt;= 0, Loan_Amount__c &lt; 4000),  
      ( Loan_Amount__c * 0.10 +  (Loan_Amount__c + Payment_frequency_Fees__c)* 0.04), 

      IF( AND(Loan_Amount__c &gt;= 4000, Loan_Amount__c &lt;= 10000),  
          ( Loan_Amount__c * 0.20 +  (Loan_Amount__c + Payment_frequency_Fees__c) * 0.02), 
          
          ( Loan_Amount__c * 0.30 +  (Loan_Amount__c + Payment_frequency_Fees__c)* 0.01)
      )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Repayment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>